# chelombus-package

./: LICENSE  README.md  cluster.sh  clustering.sh  clustering_dask_recursive.py  requirements.txt  setup.py
api/: clustering.py  dask-clustering.py  dask_clustering.py  data_handler.py  fingerprint_calculator.py  output_generator.py  pyproject.toml  tmap_generator.py
api/utils/: __init__.py  common_arg_parser.py  config.py  config_loader.py  helper_functions.py  notebook.ipynb
chelombus/: __init__.py  data_handler.py  dimensionality_reducer.py  fingerprint_calculator.py  output_generator.py  pyproject.toml  tmap_generator.py
chelombus/tests/: test_chunk_cxsmiles.py
chelombus/utils/: __init__.py  common_arg_parser.py  config.py  config_loader.py  default_config_template.yml  helper_functions.py  log_setup.py  logging.py
cli/: clustering.py  dask-clustering.py  fingerprint.py  pca.py
cli/pipeline/: cluster_pipeline.py  clustering.sh  clustering_dask_recursive.py
data/: ipca_model.joblib
docs/: README.md  utilities.md
scripts/: cluster_pipeline.py  clustering.py  fingerprint.py  pca.py  percentile_calculation.py  tmap_pipeline.py
tests/: README.md  test_chunk_size.py  test_compressed_speed.py  test_data_handler.py  test_fp_calculator.py  test_helper_functions.py
