[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chelombus"]

[tool.setuptools.entry-points]
console_scripts = [
    "calculate-fingerprints=scripts.fingerprint:main",
    "perform-pca=scripts.pca:main",
    "run-clustering=scripts.clustering:main",
]

[project]
name = "chelombus"
version = "0.1.0"
description = "A package for fingerprints, PCA, and clustering of large molecular datasets."
authors = [
    {name = "Alejandro Flores S.", email = "afloresep01@gmail.com"}
]
dependencies = [
    "faerun>=0.4.7",
        "joblib>=1.3.2",
        "mapchiral>=0.0.6",
        "mhfp>=1.9.6",
        "numpy>=1.21.6",
        "pandarallel>=1.6.5",
        "pandas>=1.3.5",
        "pyspark>=3.5.3",
        "rdkit>=2023.3.2",
        "scikit-learn>=1.0.2",
        "tmap>=1.2.1",
        "tqdm>=4.67.0",
]
python = ">=3.7"
